sep-2025-k8s-grpc-redirect/grpcroute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-redirects-route
  namespace: default
spec:
  parentRefs:
  - name: edge-gateway
  rules:
  - matches:
    - method:
        service: telemetry.MetricsService
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: redirectHostName
          value: "telemetry-backup.internal"
    backendRefs:
    - name: telemetry-backup-service
      port: 9000
